[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/AudioOptions.gd" type="Script" id=1]
[ext_resource path="res://scenes/JuiceTextureButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/textures/ui/icons/White/1x/audioOn.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/ui/icons/White/1x/audioOff.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/ui/icons/White/1x/musicOn.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/ui/icons/White/1x/musicOff.png" type="Texture" id=6]

[node name="AudioOptions" type="VBoxContainer"]
custom_constants/separation = -8
alignment = 1
script = ExtResource( 1 )

[node name="SoundContainer" type="HBoxContainer" parent="."]
margin_right = 187.0
margin_bottom = 55.0
alignment = 1

[node name="MuteSound" parent="SoundContainer" instance=ExtResource( 2 )]
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 55 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
stretch_mode = 3

[node name="SoundVolume" type="HSlider" parent="SoundContainer"]
margin_left = 59.0
margin_right = 187.0
margin_bottom = 55.0
rect_min_size = Vector2( 128, 16 )
rect_clip_content = true
size_flags_vertical = 1
min_value = -12.0
max_value = 12.0
ticks_on_borders = true

[node name="MusicContainer" type="HBoxContainer" parent="."]
margin_top = 47.0
margin_right = 187.0
margin_bottom = 102.0
alignment = 1

[node name="MuteMusic" parent="MusicContainer" instance=ExtResource( 2 )]
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 55 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
stretch_mode = 3

[node name="MusicVolume" type="HSlider" parent="MusicContainer"]
margin_left = 59.0
margin_right = 187.0
margin_bottom = 55.0
rect_min_size = Vector2( 128, 16 )
rect_clip_content = true
size_flags_vertical = 1
min_value = -12.0
max_value = 12.0
ticks_on_borders = true

[connection signal="toggled" from="SoundContainer/MuteSound" to="." method="_on_mute_sound_button_toggled"]
[connection signal="value_changed" from="SoundContainer/SoundVolume" to="." method="_on_sound_volume_slider_value_changed"]
[connection signal="toggled" from="MusicContainer/MuteMusic" to="." method="_on_mute_music_button_toggled"]
[connection signal="value_changed" from="MusicContainer/MusicVolume" to="." method="_on_music_volume_slider_value_changed"]
